package(default_visibility = ["//visibility:public"])

# Constraints used to describe docker compatible toolchains.

# Platform describing a machine with an Intel CPU. Depending on whether we pass
# it as `--platform` or `--host_platform` we tell Bazel if we care about
# targeting or execution.
platform(
    name = "intel",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ],
)

# Platform describing a machine with an ARM64e CPU (Apple Silicon). Depending
# on whether we pass it as `--platform` or `--host_platform` we tell Bazel if
# we care about targeting or execution.
platform(
    name = "arm",
    constraint_values = [
        "@platforms//cpu:arm64e",
    ],
)


